--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,34 @@ nav:
     - Overview:
         - 'Topics': index.md
 
-
 theme:
     name: material
+    favicon: 'images/site_logo.png'
+    logo: 'images/site_logo.png'
     palette:
         scheme: slate
         primary: brown
 
 repo_name: 'Random Solution'
 repo_url: 'https://github.com/atifkarim/random_solution'
+
+markdown_extensions:
+  - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+  - admonition
