--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ nav:
         - 'Topics': index.md
 
 theme:
-    # name: material
-    name: readthedocs
+    name: material
+    # name: readthedocs
     favicon: 'images/site_logo.png'
     logo: 'images/site_logo.png'
     palette:
